# SO

./: .gitignore  README
cw1/: CMakeLists.txt  Makefile  Readme.md  array.c  array.h  main.c  results.txt  runall.sh
cw1/results/: results.txt
cw10/: readme.md
cw10/zad1/: CMakeLists.txt  client.c  common.h  server.c
cw10/zad2/: CMakeLists.txt  client.c  common.h  server.c
cw2/: komentarz.txt  readme.md
cw2/zad1/: CMakeLists.txt  main.c  results.txt  test.sh
cw2/zad2/: CMakeLists.txt  main.c  treewalk.c  treewalk.h
cw3/: readme.md
cw3/zad1/: CMakeLists.txt  main.c
cw3/zad2/: insert.txt  main.c
cw3/zad3/: CMakeLists.txt  insert.txt  main.c  test1.c  test2.c
cw4/: komentarz.txt  readme.md
cw4/zad1/: CMakeLists.txt  clock.c  date.sh  main.c
cw4/zad2/: CMakeLists.txt  child.c  main.c  x.c
cw4/zad3/: CMakeLists.txt  main.c
cw5/: komentarz  readme.md
cw5/zad1/: CMakeLists.txt  main.c
cw5/zad2/: CMakeLists.txt  main.c  master.c  slave.c
cw6/: readme.md
cw6/zad1/: CMakeLists.txt  client.c  server.c  settings.h
cw6/zad2/: CMakeLists.txt  client.c  server.c  settings.h
cw7/: readme.md
cw7/zad1/: CMakeLists.txt  barber.c  creator.c  shared_memory.c  shared_memory.h
cw7/zad2/: CMakeLists.txt  barber.c  creator.c  shared_memory.c  shared_memory.h
cw8/zad1/: CMakeLists.txt  edge_detection2.txt  edge_detection3.txt  elephant.txt  newdog.pgm  readme.md  results.txt  test.sh  zad.c
cw9/: readme.md  zad.c
cw9/zad1/: CMakeLists.txt  configuration.txt  shared_memory.c  zad.c  (+1 more)
lab5/: CMakeLists.txt  insert.txt  main.c
untitled/: main.c
(+3 files in other folders)
